# laba6cpp

./: .gitignore  CMakeLists.txt  NormalFraction.cpp  NormalFraction.h  main.cpp  tests.cpp
